Aggiunta file video

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     </style>
 </head>
 <body>
+    <button onclick="window.location.href='descrizione_prova.html';">
+        Vedi la descrizione della prova e le note
+      </button>
     <h1>Prove 20 esemplari PocketGSM 2G</h1>
     <table>
         <thead>
